src/components/SelectDropdown/SelectDropdown.css
.Select {
  position: relative;
  border: 1px solid #e6e6e6;
  line-height: 1rem;
  min-height: 2rem;
  box-sizing: border-box;
  transition: 0.3s ease-out 0s;
}

.InnerSelectWrap {
  width: 100%;
  position: relative;
}

.Select.is-disabled {
  cursor: not-allowed;
  background-color: rgb(235, 235, 228);
}

.Select--single.Select.is-disabled,
.Select--single.Select.is-disabled:hover {
  cursor: not-allowed;
}

.Select-control {
  padding: 7px 15px;
}

.sprint-dropdown .Select-value-label {
  padding-right: 12px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.Select-clear-zone {
  cursor: pointer;
  position: absolute;
  display: none;
  align-items: center;
  justify-content: center;
  top: 0;
  bottom: 0;
  right: 0;
  width: 32px;
}

.Select--multi.Select:hover {
  cursor: text;
}
.Select--single.Select:hover {
  cursor: pointer;
}

.Select--single .Select-multi-value-wrapper {
  display: flex;
  white-space: nowrap;
  max-width: 100%;
}

.Select-custom-value {
  overflow: hidden;
  text-overflow: ellipsis;
}

.Select--single .Select-multi-value-wrapper .Select-value,
.Select--single .Select-multi-value-wrapper .Select-value .Select-value-label,
.Select-input {
  max-width: 100%;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.Select--multi .Select-control {
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 13px;
  line-height: 16px;
}

.Select.is-focused {
  border-color: #d8d8d8;
  transition: 0.3s ease-out 0s;
}

.Select-placeholder,
.Select-input,
.Select-multi-value-wrapper,
.Select-multi-value-wrapper .Select-value {
  display: inline-block;
  line-height: 1rem;
}

.Select-placeholder,
.Select-aria-only {
  color: silver;
  display: inline-block;
  vertical-align: middle;
}

.Select-placeholder {
  position: absolute;
  top: 7px;
  left: 15px;
}

.Select-input input {
  border: none;
  padding: 0;
  font-size: inherit;
  line-height: inherit;
  background-color: transparent;
}

.Select-menu-outer {
  position: absolute;
  z-index: 2; /* Global z-index context (dropdown-layer) */
  background-color: white;
  border: 1px solid rgba(0, 0, 0, 0.1);
  box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.17);
  top: calc(100% + 1px);
  left: -1px;
  right: -1px;
}

.Select-menu {
  max-height: 20rem;
  overflow: auto;
}

.Select-option {
  padding: 7px 15px;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: pointer;
  transition: 0.3s ease-out 0s;
}

.Select-option.is-selected {
  background-color: #f1f1f1;
}

.Select-option.is-focused {
  background-color: #f1f1f1;
  transition: 0.3s ease-out 0s;
}

.Select-option.is-disabled {
  opacity: 0.3;
}

.Select--multi .Select-multi-value-wrapper .Select-value {
  font-size: 11px;
  vertical-align: middle;
  color: white;
  background-color: #88a4bf;
  height: 1rem;
  padding: 0 14px;
  margin: 2px 4px 2px 0;
  position: relative;
  cursor: pointer;
}

.Select--multi .Select-input {
  margin: 2px;
  vertical-align: middle;
}

.Select--multi .Select-multi-value-wrapper .Select-value .Select-value-icon {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  width: 1rem;
  opacity: 0;
  transition: 0.3s ease-out 0s;
}

.Select--multi .Select-multi-value-wrapper .Select-value:hover {
  background-color: #4f7192;
  transition: 0.3s ease-out 0s;
}

.Select--multi .Select-multi-value-wrapper .Select-value:hover .Select-value-icon {
  opacity: 1;
  transition: 0.3s ease-out 0s;
}

.Select-noresults {
  padding: 7px 15px;
  color: gray;
}

/* Styles for Sprints selector */

.Select--multi.sprintSelector .Select-multi-value-wrapper .Select-value {
  font-size: 13px;
  color: black;
  background-color: white;
  padding: 15px;
  margin: 0;
}

.ClearValue {
  position: absolute;
  top: 6px;
  right: 7px;
  cursor: pointer;
  padding: 2px;
}

.Select--multi.sprintSelector .Select-multi-value-wrapper .Select-value:hover {
  background-color: #ebebeb;
  transition: 0.3s ease-out 0s;
}

.Select--multi.sprintSelector .Select-multi-value-wrapper .Select-input {
  margin-left: 40px;
  padding: 6px 0 7px;
}

.Select--multi.taskListClass .Select-multi-value-wrapper .Select-input {
  margin-left: 15px;
}

.Select--multi.sprintSelector .Select-control {
  padding: 0;
  min-height: 30px;
}

.Select.sprintReportSelector .Select-multi-value-wrapper .Select-value .Select-value-label {
  margin-right: 0;
}

